welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:15: error: not found: value sortieTrouv?e
while (!sortieTrouv?e())
        ^